Update build.xml
fixing some xml with compiler args