@@ -3,11 +3,11 @@
     simple example build file
   </description>
    
-  <resources id='javac.compiler.args.parts.collection'>
+  <resources id='javac.compiler.args.parts'>
     <string value="--add-modules jdk.management.jfr" />
   </resources>
 
-  <property name="javac.compiler.args" value="-version ${javac.compiler.args.parts}"/>
+  <!--property name="javac.compiler.args" value="-version ${javac.compiler.args.parts}"/-->
   
   <property name="src" location="src"/>
   <property name="build" location="build"/>
@@ -20,11 +20,10 @@
     <mkdir dir="${build}"/>
   </target>
 
-  <target name="compile" depends="init"
-        description="compile the source">
+  <target name="compile" depends="init" description="compile the source">
     <!-- Compile the Java code from ${src} into ${build} -->
     <javac srcdir="${src}" destdir="${build}">
-			<compilerarg line="${javac.compiler.args}"/>      
+			<compilerarg line=""--add-modules jdk.management.jfr"/>      
     </javac>
   </target>
 
